# BilliardsOverlay

./: .env.example  .gitattributes  .gitignore  README.md  SETUP.md  config.example.yaml  pyproject.toml  requirements.txt
deploy/: sensor_config.yaml
scripts/: install_brain_service.ps1  provision_pi.py
src/pool_guide/: __init__.py  config.py  recommend.py
src/pool_guide/apps/: aim_assist.py  autotune_camera.py  best_shot.py  calibrate.py  capture_background.py  drills.py  sensor_node.py  shot_predictor.py  track_balls.py  verify_calibration.py  webui.py
src/pool_guide/calibration/: __init__.py  aruco.py  model.py  store.py
src/pool_guide/capture/: __init__.py  base.py  camera_controls.py  kinect.py  network_client.py  synthetic.py  webcam.py
src/pool_guide/display/: __init__.py  base.py  cast.py  local.py  network_sink.py
src/pool_guide/drills/: __init__.py  library.py  model.py  progress.py  session.py
src/pool_guide/net/: __init__.py  protocol.py
src/pool_guide/physics/: __init__.py  engine.py  pooltool_engine.py  simple.py
src/pool_guide/ui/: __init__.py  controls.py
src/pool_guide/vision/: __init__.py  aim.py  balls.py  cue.py  table.py  tracking.py  tuning.py
src/pool_guide/webui/: __init__.py  server.py
src/pool_guide/webui/static/: app.js  index.html  style.css
tests/: test_ball_detection.py  test_calibration_roundtrip.py  test_cast.py  test_cue_and_aim.py  test_drills.py  test_physics.py  test_recommend.py  test_tuning.py  test_webui.py
